--- a/ProiectASPNET/ProiectASPNET/ClientApp/src/index.html
+++ b/ProiectASPNET/ProiectASPNET/ClientApp/src/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <title>Cartea ta a intalnit cartea mea</title>
-    <base href="/" />
+<head>
+  <meta charset="utf-8" />
+  <script src="https://kit.fontawesome.com/0212859aec.js" crossorigin="anonymous"></script>
+  <title>Cartea ta a intalnit cartea mea</title>
+  <base href="/" />
 
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" type="image/x-icon" href="favicon.ico" />
-  </head>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link rel="icon" type="image/x-icon" href="favicon.ico" />
+</head>
   <body>
     <app-root>Loading...</app-root>
   </body>
